--- a/UIwpf/delStationFromLine.xaml
+++ b/UIwpf/delStationFromLine.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UIwpf"
         mc:Ignorable="d"
-        Title="delStationFromLine" Height="450" Width="450">
+        Title="delStationFromLine" Height="220" Width="450">
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="264,74,0,0" TextWrapping="Wrap" Text=":הכנס מספר מזהה" VerticalAlignment="Top"/>
+        
         <TextBlock HorizontalAlignment="Left" Margin="195,22,0,0" TextWrapping="Wrap" Text="מחיקת תחנה מקו" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="94,73,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" Text="{Binding Path=IdentifyNumber, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
-        <TextBlock HorizontalAlignment="Left" Margin="267,124,0,0" TextWrapping="Wrap" Text=":הכנס מספר תחנה" VerticalAlignment="Top" Width="118"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="94,122,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" Text="{Binding Path=CodeStation, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
-        <Button Content="מחק" HorizontalAlignment="Left" Margin="162,177,0,0" VerticalAlignment="Top" Width="122" Height="36" Click="Button_ClickDelete"/>
+        
+        <TextBlock HorizontalAlignment="Left" Margin="267,58,0,0" TextWrapping="Wrap" Text=":הכנס מספר תחנה" VerticalAlignment="Top" Width="118"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="94,58,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" MaxLength="6" Text="{Binding Path=CodeStation, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
+        <Button Content="מחק" HorizontalAlignment="Left" Margin="162,107,0,0" VerticalAlignment="Top" Width="122" Height="36" Click="Button_ClickDelete"/>
 
     </Grid>
 </Window>
